--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       {
         id: 'app1',
         title: 'သတင်းနှင့်ဇာတ်ကား',
-        icon: '<a href="https://ibb.co/Dd2Lcdt"><img src="https://i.ibb.co/5ZH2pZ6/IMG-20250907-105744.png" alt="IMG-20250907-105744" border="0"></a>',
+        icon: 'https://i.ibb.co/NRB7DRs/IMG-20250907-105744.png',
         category: 'Entertainment',
         purpose: 'သတင်း၊ ရုပ်ရှင်နှင့် ဗီဒီယိုများ ကြည့်ရှုရန်',
         download_link: 'https://www.mediafire.com/file/kz2cas0hpx4p2mz/%E1%80%9E%E1%80%90%E1%80%84%E1%80%BA%E1%80%B8%E1%80%94%E1%80%BE%E1%80%84%E1%80%BA%E1%80%B7%E1%80%87%E1%80%AC%E1%80%90%E1%80%BA%E1%80%80%E1%80%AC%E1%80%B8update.apk/file'
@@ -142,7 +142,7 @@
       {
         id: 'app2',
         title: 'Xvideo',
-        icon: '<a href="https://ibb.co/601rXkDK"><img src="https://i.ibb.co/601rXkDK/photo-2025-09-17-18-24-51.jpg" alt="photo-2025-09-17-18-24-51" border="0"></a>',
+        icon: 'https://i.ibb.co/yFYd4rgz/photo-2025-09-17-18-24-51.jpg',
         category: 'myanmarxxn',
         purpose: 'all video',
         download_link: 'https://www.mediafire.com/file/l2bhhand4d6yuuc/Xvideo.apk/file'
@@ -333,3 +333,4 @@
   </script>
 </body>
 </html>
+
