--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="logo">WY</div>
         <div>
           <h1>WaiYan App Store</h1>
-          <p class="lead">MediaFire links ဖြင့် download စနစ် — icon တွေကို MediaFire မှာ host ထားပြီး link ထည့်နိုင်ပါတယ်</p>
+          <p class="lead">MediaFire links ဖြင့် download စနစ်</p>
         </div>
       </div>
       <div class="contact">Email: <strong>c38925@gmail.com</strong><br/><small style="color:var(--muted)">Right side contact (editable in code)</small></div>
@@ -97,7 +97,7 @@
     </main>
 
     <footer>
-      <div class="note">App links: MediaFire (replace example URLs in the code with your MediaFire direct links)</div>
+      <div class="note">App links:MediaFire direct links)</div>
       <div><button class="btn secondary small" onclick="openEditSource()">Edit in code</button></div>
     </footer>
   </div>
@@ -333,6 +333,7 @@
   </script>
 </body>
 </html>
+
 
 
 
