--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     </main>
 
     <footer>
-      <div class="note">App links:MediaFire direct links)</div>
-      <div><button class="btn secondary small" onclick="openEditSource()">Edit in code</button></div>
+      <div class="note">App links:MediaFire direct links</div>
+      <div><button class="btn secondary small" onclick="openEditSource()">Wellcome</button></div>
     </footer>
   </div>
 
@@ -333,6 +333,7 @@
   </script>
 </body>
 </html>
+
 
 
 
