--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p class="lead">MediaFire links ဖြင့် download စနစ်</p>
         </div>
       </div>
-      <div class="contact">Email: <strong>c38925@gmail.com</strong><br/><small style="color:var(--muted)">Right side contact (editable in code)</small></div>
+      <div class="contact">Email: <strong>c388925@gmail.com</strong><br/><small style="color:var(--muted)">contact (+66926459800)</small></div>
     </header>
 
     <main>
@@ -333,6 +333,7 @@
   </script>
 </body>
 </html>
+
 
 
 
