--- a/index.html
+++ b/index.html
@@ -162,7 +162,39 @@
         category: 'App',
         purpose: 'download',
         download_link: 'https://www.mediafire.com/file/n8ohx9xnfisynuw/WY_App_Store.apk/file'
-      }  
+      },
+       {
+        id: 'app6',
+        title: 'Sketchware pro',
+        icon: 'https://i.ibb.co/YB24757s/photo-2025-09-18-07-49-55.jpg',
+        category: 'create',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/7pi9zf551xbgiy8/Sketchware_pro.apk/file'
+      },
+      {
+        id: 'app7',
+        title: 'AIDE pro_2.8',
+        icon: 'https://i.ibb.co/8CPMDm7/photo-2025-09-18-07-50-07.jpg',
+        category: 'create',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/rh85g28nbmnur3f/AIDE_Pro_2.8.7-freely.apk/file'
+      },
+      {
+        id: 'app8',
+        title: 'AIDE_3.2',
+        icon: 'https://i.ibb.co/cXQ8Xv7Q/photo-2025-09-18-07-50-00.jpg',
+        category: 'create',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/50xmjvul6rn6mwq/AIDE_3.2.191010-2.3.5.apk/file'
+      },
+      {
+        id: 'app9',
+        title: 'AIDE studio pro',
+        icon: 'https://i.ibb.co/Hkc3XGd/photo-2025-09-18-07-50-13.jpg',
+        category: 'create',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/o9mew8gh9e4r3g5/Aide_studio_pro.apk/file'
+      },
     ];
     /**************************************************************************
      * END EDITABLE AREA
@@ -317,6 +349,7 @@
   </script>
 </body>
 </html>
+
 
 
 
