--- a/index.html
+++ b/index.html
@@ -195,6 +195,30 @@
         purpose: 'App',
         download_link: 'https://www.mediafire.com/file/o9mew8gh9e4r3g5/Aide_studio_pro.apk/file'
       },
+       {
+        id: 'app10',
+        title: 'Developer Color Tool',
+        icon: 'https://i.ibb.co/HD9Fx72P/photo-2025-09-18-09-44-54.jpg',
+        category: 'create color',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/oqy8bv69x90hk71/Developer_Color_Tool_1.2.apk/file'
+      },
+      {
+        id: 'app11',
+        title: 'Material Icon Maker',
+        icon: 'https://i.ibb.co/5WDs2Pgp/photo-2025-09-18-09-44-43.jpg',
+        category: 'create icon',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/lt8hgmua19ua4ij/Material_Icon_Maker.apk/file'
+      },
+      {
+        id: 'app12',
+        title: 'AndroidExample',
+        icon: 'https://i.ibb.co/nMq2ND9J/photo-2025-09-18-09-44-48.jpg',
+        category: 'create',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/w91gd7bp80mpdyh/AndroidExample_1.1.apk/file'
+      },
     ];
     /**************************************************************************
      * END EDITABLE AREA
@@ -349,6 +373,7 @@
   </script>
 </body>
 </html>
+
 
 
 
