--- a/index.html
+++ b/index.html
@@ -347,6 +347,78 @@
         purpose: 'App',
         download_link: 'https://www.mediafire.com/file/t7l0exm7p4is8xw/Vidma_Premium_v2.40.0_Modded_by_%2540Getmodpcs.apk/file'
       },
+      {
+        id: 'app29',
+        title: '',
+        icon: '',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: ''
+      },
+      {
+        id: 'app30',
+        title: 'Spring Video Editor',
+        icon: 'https://i.ibb.co/qMZXnKhQ/photo-2025-09-18-15-12-57.jpg',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/e5w16wh5rodi0xi/Spring_Premium_v1.4.3.3537_Modded_by_%2540Getmodpcs.apk/file'
+      },
+       {
+        id: 'app31',
+        title: 'KingMaster',
+        icon: '',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: ''
+      },
+       {
+        id: 'app32',
+        title: 'AllVideoDownloader',
+        icon: 'https://i.ibb.co/C5HfBgMq/photo-2025-09-18-15-12-48.jpg',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/ebteevjdthbzzsj/All_Video_Downloader_v1.7.2_Modded_by_%2540Getmodpcs.apk/file'
+      },
+       {
+        id: 'app33',
+        title: 'Cartoon PhotoEditor',
+        icon: 'https://i.ibb.co/bMTdQ393/photo-2025-09-18-15-12-26.jpg',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/6mjxwm5ie5wka3o/ToonTap_Pro_v1.50.89_Modded_by_%2540Getmodpcs.apk/file'
+      },
+       {
+        id: 'app34',
+        title: 'BesoccerPremium',
+        icon: 'https://i.ibb.co/xtDd5G97/photo-2025-09-18-15-12-31.jpg',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/5w8cx2u7xybw0uf/BeSoccer_Premium_v5.8.0_Modded_by_%2540Getmodpcs.apk/file'
+      },
+       {
+        id: 'app35',
+        title: 'TurboVPN Premium',
+        icon: 'https://i.ibb.co/ycfbQwfn/photo-2025-09-18-15-12-39.jpg',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/gtltcs1mzki5c91/Turbo_VPN_Premium_v4.3.1.8_Modded_by_%2540Getmodpcs.apk/file'
+      },
+       {
+        id: 'app36',
+        title: 'PicsartPremium ',
+        icon: 'https://i.ibb.co/mrVk51Y5/photo-2025-09-18-15-12-22.jpg',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/ri34hjh84h7456p/Picsart_Premium_Gold_v29.3.2_Modded_by_%2540Getmodpcs.apk/file'
+      },
+       {
+        id: 'app37',
+        title: 'Ai Chat Assistant',
+        icon: 'https://i.ibb.co/hFvZrwB2/photo-2025-09-18-15-12-17.jpg',
+        category: 'modversion',
+        purpose: 'App',
+        download_link: 'https://www.mediafire.com/file/51vqzemcoexyl6y/Chat_Smith_Premium_v8.251105.8_Modded_by_%2540Getmodpcs.apk/file'
+      },
     ];
     /**************************************************************************
      * END EDITABLE AREA
@@ -501,6 +573,7 @@
   </script>
 </body>
 </html>
+
 
 
 
