--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@
       },
       {
         id: 'app29',
-        title: '',
-        icon: '',
+        title: 'CapCut pro freeversion',
+        icon: 'https://i.ibb.co/MDkZ00Tt/photo-2025-09-18-15-54-57.jpg',
         category: 'modversion',
         purpose: 'App',
-        download_link: ''
+        download_link: 'https://www.mediafire.com/file/vccwhk9ywmepcxd/CapCut_Pro_v15.6.0_Modded_by_%2540Getmodpcs.apk/file'
       },
       {
         id: 'app30',
@@ -366,10 +366,10 @@
        {
         id: 'app31',
         title: 'KingMaster',
-        icon: '',
+        icon: 'https://i.ibb.co/xPVJQ98/photo-2025-09-18-15-12-52.jpg',
         category: 'modversion',
         purpose: 'App',
-        download_link: ''
+        download_link: 'https://www.mediafire.com/file/9cghockewg7efoq/KineMaster_Premium_v7.8.5.3542.GP_Modded_by_%2540Getmodpcs.apk/file'
       },
        {
         id: 'app32',
@@ -573,6 +573,7 @@
   </script>
 </body>
 </html>
+
 
 
 
