--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <button class="tab-btn active" data-filter="all">Home</button>
         <button class="tab-btn" data-filter="games">Games</button>
         <button class="tab-btn" data-filter="nogames">Apps</button>
+        <button class="tab-btn" data-filter="nogames">Edit Video Apps</button>
       </div>
 
       <div class="grid" id="appsGrid"></div>
@@ -70,3 +71,4 @@
 
   </body>
 </html>
+
