--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="tab-btn active" data-filter="all">Home</button>
         <button class="tab-btn" data-filter="games">Games</button>
         <button class="tab-btn" data-filter="nogames">Apps</button>
-        <button class="tab-btn" data-filter="nogames">Edit Video Apps</button>
+        <button class="tab-btn" data-filter="Edit">VideoEdit Apps</button>
       </div>
 
       <div class="grid" id="appsGrid"></div>
@@ -71,4 +71,5 @@
 
   </body>
 </html>
+
 
