--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>WaiYan App and Modapp Store</title>
   <link rel="stylesheet" href="style.css" />
   
-  </head>
+</head>
 <body>
   <div class="banner" id="banner" role="status" aria-live="polite">
     <div class="txt">WaiYanApps — <span id="bannerApp">Preparing...</span></div>
@@ -40,10 +40,12 @@
       </div>
 
       <div class="grid" id="appsGrid"></div>
+      
+      <button id="showMoreBtn" class="btn secondary" style="display: none; margin: 1.5em auto; display: block;">နောက်ထပ် ပြရန်</button>
     </main>
 
     <footer>
-      <div class="note">နောက်ထပ်ပိုပြီးအသုံးများတဲ့Mobappများကိုထက်ထည့်ပေးပါမည်</div>
+      <div class="note">နောက်ထပ်ပိုပြီးအသုံးများတဲ့Mobappများကိုထက်ထည့်ပေးပါမည်</div>
       <div><button class="btn secondary small" onclick="openEditSource()">Wellcome</button></div>
     </footer>
   </div>
@@ -57,7 +59,7 @@
       <div class="modal-body">
         <p>To add, remove, or change apps, you need to edit the source code.</p>
         <ol>
-          <li>ကိုယ်ဒေါင်းမည့်appရဲ့<code>download</code>ကိုနှိပ်ပေးပါ</li>
+          <li>ကိုယ်ဒေါင်းမည့်appရဲ့<code>download</code>ကိုနှိပ်ပေးပါ</li>
           <li>ပြီးရင်Broswer သို့မဟုတ် Chorme ကိုရွေးပေးပါ</li>
           <li>Change the <code>icon</code> value to your icon's direct URL.</li>
           <li>Change the <code>download_link</code> to your file's share link.</li>
@@ -69,5 +71,5 @@
 
   <script src="script.js"></script>
 
-  </body>
+</body>
 </html>
