--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="contact">
-        <a href="https://t.me/WY_YOUTH" target="_blank">Contact Us</a>
+        <a href="https://t.me/waiyanfelix" target="_blank">Contact Us</a>
         <br>
         <button onclick="openEditSource()">Edit Source Code</button>
       </div>
@@ -72,3 +72,4 @@
   </div>
 </body>
 </html>
+
