--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">WY</div>
         <div>
           <h1>WY APPS STORE</h1>
-          <p class="lead">လိုချင်သော Game နှင့် App မျိုးစုံကို ဒီနေရာမှာ ရှာဖွေရယူနိုင်ပါသည်</p>
+          <p class="lead">FreeVersion Game နှင့် App မျိုးစုံကို ဒီနေရာမှာ ရှာဖွေရယူနိုင်ပါသည်</p>
         </div>
       </div>
     </header>
@@ -38,3 +38,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
